feat: protect sensitive production responses